--- a/server/config.json
+++ b/server/config.json
@@ -1,7 +1,7 @@
 {
   "restApiRoot": "/api",
-  "host": "0.0.0.0",
-  "port": 3000,
+  "host": "http://message-app.mybluemix.net",
+  "port": 80,
   "remoting": {
     "context": {
       "enableHttpContext": true
